SOLR-10184: Fix bin/solr so it can run properly on java9
(cherry picked from commit 09bd8612ce82c2852542127eb24b887c7b332a0d)